# job_defense_shield

./: .gitignore  404.html  CITATION.cff  README.md  base.py  cleaner.py  configuration.html  contributions.html  emails.html  example.yaml  extra.html  index.html  job_defense_shield.py  mkdocs.yml  nodelist.html  publications.html  pyproject.toml  raw_job_data.py  setup.html  sitemap.xml  support.html
alert/: cancel_gpu_jobs.html  cancel_zero_gpu_jobs.py  compute_efficiency.py  cpu_fragmentation.html  excess_cpu_mem_per_gpu.html  excess_cpu_memory.html  excess_cpu_memory.py  excessive_time_limits.py  gpu_fragmentation.html  gpu_model_too_powerful.html  gpu_model_too_powerful.py  jobs_overview.py  longest_queued.py  low_cpu_util.html  low_gpu_util.html  most_cores.py  most_gpus.py  multinode_cpu_fragmentation.py  multinode_gpu_fragmentation.py  new_alert.html  serial_allocating_multiple.html  serial_allocating_multiple_cores.py  time_limits.html  time_limits_gpu.html  too_many_cores_per_gpu.html  too_much_cpu_mem_per_gpu.py  usage_by_slurm_account.py  usage_overview.py  your_first_alert.html  zero_cpu_util.html  zero_cpu_utilization.py  zero_gpu_util.html  zero_util_gpu_hours.py
configuration/: index.html
contributions/: index.html
docs/: configuration.md  contributions.md  emails.md  extra.md  index.md  nodelist.md  publications.md  setup.md
email/: cancel_gpu_jobs_scancel_3.txt  cancel_gpu_jobs_sliding_cancel.txt  cancel_gpu_jobs_sliding_warning.txt  cancel_gpu_jobs_warning_1.txt  excess_cpu_memory.txt  excessive_time.txt  gpu_model_too_powerful.txt  low_cpu_efficiency.txt  multinode_cpu_fragmentation.txt  multinode_gpu_fragmentation.txt  serial_allocating_multiple.txt  too_many_cores_per_gpu.txt  too_much_cpu_mem_per_gpu.txt  zero_cpu_utilization.txt  zero_util_gpu_hours.txt
emails/: index.html
extra/: index.html
(+112 files in other folders)
