[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-defense-shield"
dynamic = ["version"]
description = "Identify and reduce instances of underutilization by the users of high-performance computing systems"
readme = "README.md"
authors = [{name="Jonathan Halverson", email="halverson@princeton.edu"}]
license = {file = 'LICENSE'}
keywords = ["alert", "monitoring", "HPC", "Slurm", "underutilization", "Jobstats"]
requires-python = ">=3.7"
dependencies = [
  "pandas>=2.1.0",
  "pyarrow>=15.0.0",
  "pyyaml>=6.0",
  "requests>=2.31.0"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]

[project.optional-dependencies]
test = ["pytest>=7"]
check = ["ruff>=0.6.0"]

[project.urls]
"Documentation" = "https://princetonuniversity.github.io/job_defense_shield"
"Repository" = "https://github.com/PrincetonUniversity/job_defense_shield"

[project.scripts]
job_defense_shield = "job_defense_shield.job_defense_shield:main"

[tool.hatch]
version.path = "src/job_defense_shield/__init__.py"

[tool.pytest.ini_options]
pythonpath = ["src/job_defense_shield/"]
